Opened 12 years ago
Closed 12 years ago
#9753 closed bug (fixed)
Menu Field with frame (non-layout) and not fixed size should truncate label if item is wider than frame
Reported by: | IMadering | Owned by: | jscipione |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Interface Kit | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Attachments (3)
Change History (8)
by , 12 years ago
Attachment: | screenshot1.png added |
---|
comment:1 by , 12 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
by , 12 years ago
Attachment: | Info window at 18pt font in Russian locale.png added |
---|
Fixed this bug, but, there are still other layout problems in this window
comment:2 by , 12 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
AFAIK this was not caused by my recent changes, but I fixed it anyway in hrev45644
by , 12 years ago
Attachment: | Menu Field truncation BeOS.png added |
---|
Screenshot showing what happens in BeOS, it does in fact truncate the field
comment:3 by , 12 years ago
Component: | User Interface → Kits/Interface Kit |
---|---|
Resolution: | fixed |
Status: | closed → reopened |
Summary: | No normal size ComboBox in Information window → Menu Field with frame (non-layout) and not fixed size should truncate label if item is wider than frame |
comment:4 by , 12 years ago
I re-opened this bug report because I am not satisfied with the bug fix I did, it really just hides the bug. I checked the behavior on BeOS 5 and the menu field does in fact get truncated when the label of the selected menu item is wider than the available space allotted for the menu portion of the menu field.
comment:5 by , 12 years ago
Resolution: | → fixed |
---|---|
Status: | reopened → closed |
Fixed (for real this time) in hrev45651. The menu field is once again in auto-resize mode, but if the width of the selected menu item is wider than the available space allotted for the menu than the menu field truncates the menu item to fit. This reproduces the behavior on BeOS more-or-less.
John, might this be a regression of your recent changes?